--- a/JLT.Common.Utility/JLT.Common.Utility.csproj
+++ b/JLT.Common.Utility/JLT.Common.Utility.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{C59407E0-2021-49B2-B505-9F774C3A7C57}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.JLT.Common.Utility</RootNamespace>
-    <AssemblyName>com.JLT.Common.Utility</AssemblyName>
+    <RootNamespace>JLT.Common.Utility</RootNamespace>
+    <AssemblyName>JLT.Common.Utility</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
