--- a/JLT.Floorplan.RestClient/JLT.Floorplan.RestClient.csproj
+++ b/JLT.Floorplan.RestClient/JLT.Floorplan.RestClient.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{41798057-7A58-4D86-B02D-E10E94E0BC7A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.VT.RestClient</RootNamespace>
-    <AssemblyName>com.VT.RestClient</AssemblyName>
+    <RootNamespace>JLT.Floorplan.RestClient</RootNamespace>
+    <AssemblyName>JLT.Floorplan.RestClient</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
