--- a/JLT.MySQL.DataAccess/JLT.MySQL.DataAccess.csproj
+++ b/JLT.MySQL.DataAccess/JLT.MySQL.DataAccess.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{8465DAD5-D59B-4959-B3ED-E3E58584EC77}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.JLT.DataAccess</RootNamespace>
-    <AssemblyName>com.JLT.DataAccess</AssemblyName>
+    <RootNamespace>JLT.MySQL.DataAccess</RootNamespace>
+    <AssemblyName>JLT.MySQL.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
