--- a/JLT.Security.TokenAuth/JLT.Security.TokenAuth.csproj
+++ b/JLT.Security.TokenAuth/JLT.Security.TokenAuth.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0A0CE8F5-96F3-446D-9EDA-0F695DD03DDA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>com.JLT.Security.TokenAuth</RootNamespace>
-    <AssemblyName>com.JLT.Security.TokenAuth</AssemblyName>
+    <RootNamespace>JLT.Security.TokenAuth</RootNamespace>
+    <AssemblyName>JLT.Security.TokenAuth</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
