--- a/JLT.Floorplan.App/Web.config
+++ b/JLT.Floorplan.App/Web.config
@@ -15,7 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-com.JLT.eProctor-20160429185554;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-JLT.eProctor-20160429185554;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
     <add name="eproctor_dbconnection" connectionString="server=localhost;uid=sanjay;password=sanJAN15;Database=eproctor_v1" providerName="System.Data.MySqlClient"/>
   </connectionStrings>
   <appSettings>
@@ -47,7 +47,7 @@
     <!--PDF Settings-->
     <add key="PDFLicenseKey" value="JQ4XBRQQBRUFEwsVBRYUCxQXCxwcHBw="/>
     <!-- Rest Service URL-->
-    <add key="RestServiceURL" value="http://localhost/wip/JLT/sp/com.JLT.RestAPI/api/"/>
+    <add key="RestServiceURL" value="http://localhost/wip/JLT/sp/JLT.RestAPI/api/"/>
     <add key="EamilRegEx" value="/^[^\s@]+@[^\s@]+\.[^\s@]+$/"/>
     <!-- File Upload Paths -->
     <add key="PhotoDimention" value="160"/>
