--- a/JLT.Floorplan.Entity/JLT.Floorplan.Entity.csproj
+++ b/JLT.Floorplan.Entity/JLT.Floorplan.Entity.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1A9DAA55-E5B2-46E1-ACD8-FE4FD59C1659}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JLT.FLoorplan.Entity</RootNamespace>
-    <AssemblyName>JLT.FLoorplan.Entity</AssemblyName>
+    <RootNamespace>JLT.Floorplan.Entity</RootNamespace>
+    <AssemblyName>JLT.Floorplan.Entity</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
