--- a/JLT.MySQL.DataAccess/JLT.MySQL.DataAccess.csproj
+++ b/JLT.MySQL.DataAccess/JLT.MySQL.DataAccess.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{8465DAD5-D59B-4959-B3ED-E3E58584EC77}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JLT.MySQL.DataAccess</RootNamespace>
-    <AssemblyName>JLT.MySQL.DataAccess</AssemblyName>
+    <RootNamespace>JLT.MySql.DataAccess</RootNamespace>
+    <AssemblyName>JLT.MySql.DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,7 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data">
+    <Reference Include="MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ExternalLib\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data.Entity, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
