updated config files

--- a/JLT.Floorplan.App/JLT.Floorplan.App.csproj
+++ b/JLT.Floorplan.App/JLT.Floorplan.App.csproj
@@ -509,7 +509,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>65212</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/com.JLT.Floorplan</IISUrl>
+          <IISUrl>http://localhost/JLT.Floorplan.App</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
