--- a/JLT.Floorplan.App/Web.config
+++ b/JLT.Floorplan.App/Web.config
@@ -15,8 +15,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-JLT.eProctor-20160429185554;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="eproctor_dbconnection" connectionString="server=localhost;uid=sanjay;password=sanJAN15;Database=eproctor_v1" providerName="System.Data.MySqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-JLT-20160429185554;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="dbconnection" connectionString="server=localhost;uid=root;password=mysql123;Database=jlt_smdb" providerName="System.Data.MySqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -33,46 +33,10 @@
     <add key="elmah.mvc.allowedUsers" value="*"/>
     <add key="elmah.mvc.route" value="elmah"/>
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true"/>
-    <!--SMS Settings-->
-    <add key="SmsUrl" value="http://www.smsgatewaycenter.com/library/send_sms_2.php?"/>
-    <add key="UserName" value="diversified"/>
-    <add key="Password" value="diversified123"/>
-    <add key="SenderId" value="REGNOW"/>
-    <add key="SmsType" value="NP"/>
-    <add key="LogFile" value=""/>
-    <!--SMS Settings-->
-    <!-- Crypto Keys (Should be same in Admin & PS-->
+    <!-- Crypto Keys -->
     <add key="AES_KEY" value="@D1v3rs1f!3d5ecu7r6n0t3@6ybr0k3n!0uW100f@#$l"/>
     <add key="AES_SALT" value="s@1t50d!umch10r!d3"/>
-    <!--PDF Settings-->
-    <add key="PDFLicenseKey" value="JQ4XBRQQBRUFEwsVBRYUCxQXCxwcHBw="/>
-    <!-- Rest Service URL-->
-    <add key="RestServiceURL" value="http://localhost/wip/JLT/sp/JLT.RestAPI/api/"/>
-    <add key="EamilRegEx" value="/^[^\s@]+@[^\s@]+\.[^\s@]+$/"/>
-    <!-- File Upload Paths -->
-    <add key="PhotoDimention" value="160"/>
-    <!-- Proctoring Keys -->
-    <!--<add key="WebSocketServer" value="wss://52.37.186.22:8443"/>-->
-    <!--<add key="WebSocketServer" value="wss://rtcwss.hostexam.net:8443"/>-->
-    <add key="WebSocketServer" value="wss://rtcwss.hostexam.net:7443"/>
-    <add key="maxcandidateperproctor" value="25"/>
-    <!-- TestEngine API Url -->
-    <add key="TestEngineAPIurl" value="https://s1.examonline.in/ProctorEO/Examservice/"/>
-    <!-- TestEngineEngineRestAPIurl for file server APIs (GET) -->
-    <add key="TestEngineEngineRestAPIurl" value="https://s1.examonline.in/proctoreo/restapi/api/"/>
-    <!-- Interval in msec for photo click -->
-    <add key="PhotoInterval" value="10000"/>
-    <!-- Interval in msec for face tracking -->
-    <add key="FaceTrackingInterval" value="5000"/>
-    <!-- examinee rejoin time interval (secs) for no authrization -->
-    <add key="RejoiningInterval" value="300"/>
-    <!-- turn server info -->
-    <add key="stun_server" value="stun.l.google.com:19302"/>
-    <add key="turn_server" value="turn:rtcwss.hostexam.net:3478"/>
-    <add key="turn_credential" value="Pa55word"/>
-    <add key="turn_user" value="eproctor"/>
-    <!-- Candidate Photo Location- 1: File Server | 0 : Local drive  -->
-    <add key="photolocation" value="1"/>
+    <add key="RestServiceURL" value="http://localhost/JLT.Floorplan.Restapi/api/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -150,8 +114,8 @@
   </entityFramework>
   <elmah>
     <security allowRemoteAccess="true" />
-    <errorLog type="Elmah.MySqlErrorLog, Elmah" connectionStringName="eproctor_dbconnection" applicationName="JLT Floorplan"/>
-    <errorMail from="contact@jltindia.com" to="dharmendra_singh@jltasai.com" subject="..." priority="Normal" async="true" smtpPort="25002" smtpServer="mail.registernow.in" useSsl="false" userName="postman@registernow.in" password="nowman" noYsod="false"/>
+    <errorLog type="Elmah.MySqlErrorLog, Elmah" connectionStringName="dbconnection" applicationName="JLT Floorplan"/>
+    <errorMail from="contact@jltindia.com" to="dharmendra_singh@jltasai.com" subject="..." priority="Normal" async="true" smtpPort="25002" smtpServer="localhost" useSsl="false" userName="drm" password="pass" noYsod="false"/>
   </elmah>
   <system.net>
     <!--<mailSettings>
