--- a/JLT.Floorplan.RestAPI/JLT.Floorplan.RestAPI.csproj
+++ b/JLT.Floorplan.RestAPI/JLT.Floorplan.RestAPI.csproj
@@ -211,7 +211,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>52124</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/ePorctor_API</IISUrl>
+          <IISUrl>http://localhost/JLT.Floorplan.Restapi</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
