--- a/JLT.Floorplan.RestAPI/Web.config
+++ b/JLT.Floorplan.RestAPI/Web.config
@@ -137,16 +137,11 @@
   </entityFramework>
   <elmah>
     <security allowRemoteAccess="true" />
-    <errorLog type="Elmah.MySqlErrorLog, Elmah" connectionStringName="eproctor_dbconnection" applicationName="eProctor RestAPI"/>
-    <errorMail from="contact@jltasia.com" to="dharmendra_singh@jltasia.com" subject="..." priority="Normal" async="true" smtpPort="25002" smtpServer=""
-               useSsl="false" userName="" password="nowman" noYsod="false"/>
+    <errorLog type="Elmah.MySqlErrorLog, Elmah" connectionStringName="dbconnection" applicationName="Floorplan"/>
+    <errorMail from="contact@jltasia.com" to="dharmendra_singh@jltasia.com" subject="..." priority="Normal" async="true" smtpPort="25" smtpServer=""
+               useSsl="false" userName="drm" password="pass" noYsod="false"/>
   </elmah>
   <system.net>
-    <!--<mailSettings>
-      <smtp deliveryMethod="PickupDirectoryFromIis">
-        <network port="25" host="127.0.0.1" userName="sanjay" password="Password" />
-      </smtp>
-    </mailSettings>-->
     <mailSettings>
       <smtp deliveryMethod="SpecifiedPickupDirectory">
         <specifiedPickupDirectory pickupDirectoryLocation="d:\EmailPickUp\" />
