--- a/JLT.Floorplan.RestAPI/packages.config
+++ b/JLT.Floorplan.RestAPI/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net40" requireReinstallation="true" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
@@ -19,7 +19,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" requireReinstallation="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
