--- a/JLT.Floorplan.RestAPI/Web.config
+++ b/JLT.Floorplan.RestAPI/Web.config
@@ -16,7 +16,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-JLT.RestAPI-20151231013204;Integrated Security=SSPI"/>
-    <add name="dbconnection" connectionString="server=localhost;uid=root;password=mysql123;Database=jlt_smdb" providerName="System.Data.MySqlClient"/>
+    <add name="dbconnection" connectionString="server=localhost;uid=root;password=mysql123;Database=jlt_smdb;SslMode=none" providerName="System.Data.MySqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
