--- a/JLT.Floorplan.App/Web.config
+++ b/JLT.Floorplan.App/Web.config
@@ -37,6 +37,7 @@
     <add key="AES_KEY" value="@D1v3rs1f!3d5ecu7r6n0t3@6ybr0k3n!0uW100f@#$l"/>
     <add key="AES_SALT" value="s@1t50d!umch10r!d3"/>
     <add key="RestServiceURL" value="http://localhost/JLT.Floorplan.Restapi/api/"/>
+    <add key="EamilRegEx" value="/^[^\s@]+@[^\s@]+\.[^\s@]+$/"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
